--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Age-calculator</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -24,6 +24,6 @@
     <div class="me">Made by Aymen Mohammed</div>
 
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
